fix: icons horizontally not aligned in navigation tree

--- a/src/components/tree/NavigationTree.module.scss
+++ b/src/components/tree/NavigationTree.module.scss
@@ -5,7 +5,6 @@
 
 .node {
   display: flex;
-  align-items: center;
   padding: 5px 0;
   cursor: default;
 
